--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.3
-gunicorn==24.1.1
+flask==3.0.0
+gunicorn==21.2.0
 numpy==1.26.4
-pandas==2.2.2
-joblib==1.3.2
+pandas==2.1.4
 scikit-learn==1.4.2
+joblib==1.3.2
